kubernetes/main/apps/wallos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  labels:
    alerts.nidr0x.win/enabled: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: wallos
  template:
    metadata:
      labels:
        app: wallos
        alerts.nidr0x.win/enabled: "true"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
        - name: wallos
          image: bellamy/wallos:5.8.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: wallos-data
              mountPath: /var/www/html/db
              subPath: db
            - name: wallos-data
              mountPath: /var/www/html/images/uploads/logos
              subPath: logos
      volumes:
        - name: wallos-data
          persistentVolumeClaim:
            claimName: wallos-data
