kubernetes/main/apps/wallos/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wallos
  name: wallos
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: wallos
